<resources>
    <string name="app_name">MockProject</string>
    <string name="muzic">Muzic</string>
    <string name="home">Home</string>
    <string name="song">Songs</string>
    <string name="setting">Settings</string>
    <string name="albums">Albums</string>
    <string name="ringtone_cutter">Ringtone Cutter</string>
    <string name="themes">Themes</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="equalizer">Equalizer</string>
    <string name="drive_mode">Drive Mode</string>
    <string name="hidden_folders">Hidden Folders</string>
    <string name="scan_media">Scan Media</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="HotRCM">Hot Recommended</string>
    <string name="Playlists">Playlists</string>
    <string name="RecentlyPlayed">Recently Played</string>
    <string name="display">Display</string>
    <string name="audio">Audio</string>
    <string name="headset">Headset</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="other">Other</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_songs">All Songs</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="my_top_tracks">My Top Tracks</string>
</resources>