<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav"
    app:startDestination="@id/homeFragment">

<!--    <navigation android:id="@+id/navigation"-->
<!--        app:startDestination="@id/homeFragment">-->
<!--        -->
<!--    </navigation>-->
    <fragment
        android:id="@+id/songFragment"
        android:name="com.example.mockproject.view.main_activity.fragmentelement.songs.SongFragment"
        android:label="@string/song"
        tools:layout="@layout/fragment_song" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.mockproject.view.main_activity.fragmentelement.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.mockproject.view.main_activity.fragmentelement.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/fragmentNowPlaying2"
        android:name="com.example.mockproject.view.main_activity.fragmentelement.nowplaying.FragmentNowPlaying"
        android:label="Now Playing"
        tools:layout="@layout/play_songs" />
</navigation>